src/bindings/clay.h


typedef struct Clay_String {
    bool isStaticallyAllocated;
    int32_t length;
    const char *chars;
} Clay_String;
typedef struct Clay_StringSlice {
    int32_t length;
    const char *chars;
    const char *baseChars; 
    int32_t baseLength; 
} Clay_StringSlice;
typedef struct Clay_Context Clay_Context;
typedef struct Clay_Dimensions {
    float width, height;
} Clay_Dimensions;
typedef struct Clay_Vector2 {
    float x, y;
} Clay_Vector2;
typedef struct Clay_Color {
    float r, g, b, a;
} Clay_Color;
typedef struct Clay_BoundingBox {
    float x, y, width, height;
} Clay_BoundingBox;
typedef struct Clay_ElementId {
    uint32_t id; 
    uint32_t offset; 
    uint32_t baseId; 
    Clay_String stringId; 
} Clay_ElementId;
typedef struct
{
    int32_t capacity;
    int32_t length;
    Clay_ElementId *internalArray;
} Clay_ElementIdArray;
typedef struct Clay_CornerRadius {
    float topLeft;
    float topRight;
    float bottomLeft;
    float bottomRight;
} Clay_CornerRadius;
typedef CLAY_PACKED_ENUM {
    CLAY_LEFT_TO_RIGHT,
    CLAY_TOP_TO_BOTTOM,
} Clay_LayoutDirection;
typedef CLAY_PACKED_ENUM {
    CLAY_ALIGN_X_LEFT,
    CLAY_ALIGN_X_RIGHT,
    CLAY_ALIGN_X_CENTER,
} Clay_LayoutAlignmentX;
typedef CLAY_PACKED_ENUM {
    CLAY_ALIGN_Y_TOP,
    CLAY_ALIGN_Y_BOTTOM,
    CLAY_ALIGN_Y_CENTER,
} Clay_LayoutAlignmentY;
typedef CLAY_PACKED_ENUM {
    CLAY__SIZING_TYPE_FIT,
    CLAY__SIZING_TYPE_GROW,
    CLAY__SIZING_TYPE_PERCENT,
    CLAY__SIZING_TYPE_FIXED,
} Clay__SizingType;
typedef struct Clay_ChildAlignment {
    Clay_LayoutAlignmentX x; 
    Clay_LayoutAlignmentY y; 
} Clay_ChildAlignment;
typedef struct Clay_SizingMinMax {
    float min; 
    float max; 
} Clay_SizingMinMax;
typedef struct Clay_SizingAxis {
    union {
        Clay_SizingMinMax minMax; 
        float percent; 
    } size;
    Clay__SizingType type; 
} Clay_SizingAxis;
typedef struct Clay_Sizing {
    Clay_SizingAxis width; 
    Clay_SizingAxis height;  
} Clay_Sizing;
typedef struct Clay_Padding {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
} Clay_Padding;
typedef struct Clay_LayoutConfig {
    Clay_Sizing sizing; 
    Clay_Padding padding; 
    uint16_t childGap; 
    Clay_ChildAlignment childAlignment; 
    Clay_LayoutDirection layoutDirection; 
} Clay_LayoutConfig;
extern Clay_LayoutConfig CLAY_LAYOUT_DEFAULT;
typedef CLAY_PACKED_ENUM {
    CLAY_TEXT_WRAP_WORDS,
    CLAY_TEXT_WRAP_NEWLINES,
    CLAY_TEXT_WRAP_NONE,
} Clay_TextElementConfigWrapMode;
typedef CLAY_PACKED_ENUM {
    CLAY_TEXT_ALIGN_LEFT,
    CLAY_TEXT_ALIGN_CENTER,
    CLAY_TEXT_ALIGN_RIGHT,
} Clay_TextAlignment;
typedef struct Clay_TextElementConfig {
    void *userData;
    Clay_Color textColor;
    uint16_t fontId;
    uint16_t fontSize;
    uint16_t letterSpacing;
    uint16_t lineHeight;
    Clay_TextElementConfigWrapMode wrapMode;
    Clay_TextAlignment textAlignment;
} Clay_TextElementConfig;
typedef struct Clay_AspectRatioElementConfig {
    float aspectRatio; 
} Clay_AspectRatioElementConfig;
typedef struct Clay_ImageElementConfig {
    void* imageData; 
} Clay_ImageElementConfig;
typedef CLAY_PACKED_ENUM {
    CLAY_ATTACH_POINT_LEFT_TOP,
    CLAY_ATTACH_POINT_LEFT_CENTER,
    CLAY_ATTACH_POINT_LEFT_BOTTOM,
    CLAY_ATTACH_POINT_CENTER_TOP,
    CLAY_ATTACH_POINT_CENTER_CENTER,
    CLAY_ATTACH_POINT_CENTER_BOTTOM,
    CLAY_ATTACH_POINT_RIGHT_TOP,
    CLAY_ATTACH_POINT_RIGHT_CENTER,
    CLAY_ATTACH_POINT_RIGHT_BOTTOM,
} Clay_FloatingAttachPointType;
typedef struct Clay_FloatingAttachPoints {
    Clay_FloatingAttachPointType element; 
    Clay_FloatingAttachPointType parent; 
} Clay_FloatingAttachPoints;
typedef CLAY_PACKED_ENUM {
    CLAY_POINTER_CAPTURE_MODE_CAPTURE,
    CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH,
} Clay_PointerCaptureMode;
typedef CLAY_PACKED_ENUM {
    CLAY_ATTACH_TO_NONE,
    CLAY_ATTACH_TO_PARENT,
    CLAY_ATTACH_TO_ELEMENT_WITH_ID,
    CLAY_ATTACH_TO_ROOT,
} Clay_FloatingAttachToElement;
typedef CLAY_PACKED_ENUM {
    CLAY_CLIP_TO_NONE,
    CLAY_CLIP_TO_ATTACHED_PARENT
} Clay_FloatingClipToElement;
typedef struct Clay_FloatingElementConfig {
    Clay_Vector2 offset;
    Clay_Dimensions expand;
    uint32_t parentId;
    int16_t zIndex;
    Clay_FloatingAttachPoints attachPoints;
    Clay_PointerCaptureMode pointerCaptureMode;
    Clay_FloatingAttachToElement attachTo;
    Clay_FloatingClipToElement clipTo;
} Clay_FloatingElementConfig;
typedef struct Clay_CustomElementConfig {
    void* customData;
} Clay_CustomElementConfig;
typedef struct Clay_ClipElementConfig {
    bool horizontal; 
    bool vertical; 
    Clay_Vector2 childOffset; 
} Clay_ClipElementConfig;
typedef struct Clay_BorderWidth {
    uint16_t left;
    uint16_t right;
    uint16_t top;
    uint16_t bottom;
    uint16_t betweenChildren;
} Clay_BorderWidth;
typedef struct Clay_BorderElementConfig {
    Clay_Color color; 
    Clay_BorderWidth width; 
} Clay_BorderElementConfig;
CLAY_DLL_EXPORT void Clay_SetMeasureTextFunction(Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text, Clay_TextElementConfig *config, void *userData), void *userData);
CLAY_DLL_EXPORT void Clay_SetQueryScrollOffsetFunction(Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId, void *userData), void *userData);
    Clay_Dimensions (*Clay__MeasureText)(Clay_StringSlice text, Clay_TextElementConfig *config, void *userData);
    Clay_Vector2 (*Clay__QueryScrollOffset)(uint32_t elementId, void *userData);
void Clay_SetMeasureTextFunction(Clay_Dimensions (*measureTextFunction)(Clay_StringSlice text, Clay_TextElementConfig *config, void *userData), void *userData) {
    Clay_Context* context = Clay_GetCurrentContext();
    Clay__MeasureText = measureTextFunction;
    context->measureTextUserData = userData;
}
void Clay_SetQueryScrollOffsetFunction(Clay_Vector2 (*queryScrollOffsetFunction)(uint32_t elementId, void *userData), void *userData) {
    Clay_Context* context = Clay_GetCurrentContext();
    Clay__QueryScrollOffset = queryScrollOffsetFunction;
    context->queryScrollOffsetUserData = userData;
}