src/bindings/clay.rs

#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_Color {
    pub r: f32,
    pub g: f32,
    pub b: f32,
    pub a: f32,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_BoundingBox {
    pub x: f32,
    pub y: f32,
    pub width: f32,
    pub height: f32,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ElementId {
    pub id: u32,
    pub offset: u32,
    pub baseId: u32,
    pub stringId: Clay_String,
}
impl Default for Clay_ElementId {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ElementIdArray {
    pub capacity: i32,
    pub length: i32,
    pub internalArray: *mut Clay_ElementId,
}
impl Default for Clay_ElementIdArray {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_CornerRadius {
    pub topLeft: f32,
    pub topRight: f32,
    pub bottomLeft: f32,
    pub bottomRight: f32,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_LayoutDirection {
    CLAY_LEFT_TO_RIGHT = 0,
    CLAY_TOP_TO_BOTTOM = 1,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_LayoutAlignmentX {
    CLAY_ALIGN_X_LEFT = 0,
    CLAY_ALIGN_X_RIGHT = 1,
    CLAY_ALIGN_X_CENTER = 2,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_LayoutAlignmentY {
    CLAY_ALIGN_Y_TOP = 0,
    CLAY_ALIGN_Y_BOTTOM = 1,
    CLAY_ALIGN_Y_CENTER = 2,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay__SizingType {
    CLAY__SIZING_TYPE_FIT = 0,
    CLAY__SIZING_TYPE_GROW = 1,
    CLAY__SIZING_TYPE_PERCENT = 2,
    CLAY__SIZING_TYPE_FIXED = 3,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ChildAlignment {
    pub x: Clay_LayoutAlignmentX,
    pub y: Clay_LayoutAlignmentY,
}
impl Default for Clay_ChildAlignment {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_SizingMinMax {
    pub min: f32,
    pub max: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_SizingAxis {
    pub size: Clay_SizingAxis__bindgen_ty_1,
    pub type_: Clay__SizingType,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_SizingAxis__bindgen_ty_1 {
    pub minMax: Clay_SizingMinMax,
    pub percent: f32,
}
impl Default for Clay_SizingAxis__bindgen_ty_1 {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
impl Default for Clay_SizingAxis {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_Sizing {
    pub width: Clay_SizingAxis,
    pub height: Clay_SizingAxis,
}
impl Default for Clay_Sizing {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_Padding {
    pub left: u16,
    pub right: u16,
    pub top: u16,
    pub bottom: u16,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay__Clay_PaddingWrapper {
    pub wrapped: Clay_Padding,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_LayoutConfig {
    pub sizing: Clay_Sizing,
    pub padding: Clay_Padding,
    pub childGap: u16,
    pub childAlignment: Clay_ChildAlignment,
    pub layoutDirection: Clay_LayoutDirection,
}
impl Default for Clay_LayoutConfig {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay__Clay_LayoutConfigWrapper {
    pub wrapped: Clay_LayoutConfig,
}
impl Default for Clay__Clay_LayoutConfigWrapper {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub static mut CLAY_LAYOUT_DEFAULT: Clay_LayoutConfig;
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_TextElementConfigWrapMode {
    CLAY_TEXT_WRAP_WORDS = 0,
    CLAY_TEXT_WRAP_NEWLINES = 1,
    CLAY_TEXT_WRAP_NONE = 2,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_TextAlignment {
    CLAY_TEXT_ALIGN_LEFT = 0,
    CLAY_TEXT_ALIGN_CENTER = 1,
    CLAY_TEXT_ALIGN_RIGHT = 2,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_TextElementConfig {
    pub userData: *mut ::std::os::raw::c_void,
    pub textColor: Clay_Color,
    pub fontId: u16,
    pub fontSize: u16,
    pub letterSpacing: u16,
    pub lineHeight: u16,
    pub wrapMode: Clay_TextElementConfigWrapMode,
    pub textAlignment: Clay_TextAlignment,
}
impl Default for Clay_TextElementConfig {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_TextElementConfigWrapper {
    pub wrapped: Clay_TextElementConfig,
}
impl Default for Clay__Clay_TextElementConfigWrapper {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_AspectRatioElementConfig {
    pub aspectRatio: f32,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay__Clay_AspectRatioElementConfigWrapper {
    pub wrapped: Clay_AspectRatioElementConfig,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ImageElementConfig {
    pub imageData: *mut ::std::os::raw::c_void,
}
impl Default for Clay_ImageElementConfig {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_ImageElementConfigWrapper {
    pub wrapped: Clay_ImageElementConfig,
}
impl Default for Clay__Clay_ImageElementConfigWrapper {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_FloatingAttachPointType {
    CLAY_ATTACH_POINT_LEFT_TOP = 0,
    CLAY_ATTACH_POINT_LEFT_CENTER = 1,
    CLAY_ATTACH_POINT_LEFT_BOTTOM = 2,
    CLAY_ATTACH_POINT_CENTER_TOP = 3,
    CLAY_ATTACH_POINT_CENTER_CENTER = 4,
    CLAY_ATTACH_POINT_CENTER_BOTTOM = 5,
    CLAY_ATTACH_POINT_RIGHT_TOP = 6,
    CLAY_ATTACH_POINT_RIGHT_CENTER = 7,
    CLAY_ATTACH_POINT_RIGHT_BOTTOM = 8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingAttachPoints {
    pub element: Clay_FloatingAttachPointType,
    pub parent: Clay_FloatingAttachPointType,
}
impl Default for Clay_FloatingAttachPoints {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_PointerCaptureMode {
    CLAY_POINTER_CAPTURE_MODE_CAPTURE = 0,
    CLAY_POINTER_CAPTURE_MODE_PASSTHROUGH = 1,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_FloatingAttachToElement {
    CLAY_ATTACH_TO_NONE = 0,
    CLAY_ATTACH_TO_PARENT = 1,
    CLAY_ATTACH_TO_ELEMENT_WITH_ID = 2,
    CLAY_ATTACH_TO_ROOT = 3,
}
#[repr(u8)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub enum Clay_FloatingClipToElement {
    CLAY_CLIP_TO_NONE = 0,
    CLAY_CLIP_TO_ATTACHED_PARENT = 1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_FloatingElementConfig {
    pub offset: Clay_Vector2,
    pub expand: Clay_Dimensions,
    pub parentId: u32,
    pub zIndex: i16,
    pub attachPoints: Clay_FloatingAttachPoints,
    pub pointerCaptureMode: Clay_PointerCaptureMode,
    pub attachTo: Clay_FloatingAttachToElement,
    pub clipTo: Clay_FloatingClipToElement,
}
impl Default for Clay_FloatingElementConfig {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_FloatingElementConfigWrapper {
    pub wrapped: Clay_FloatingElementConfig,
}
impl Default for Clay__Clay_FloatingElementConfigWrapper {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_CustomElementConfig {
    pub customData: *mut ::std::os::raw::c_void,
}
impl Default for Clay_CustomElementConfig {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay__Clay_CustomElementConfigWrapper {
    pub wrapped: Clay_CustomElementConfig,
}
impl Default for Clay__Clay_CustomElementConfigWrapper {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_ClipElementConfig {
    pub horizontal: bool,
    pub vertical: bool,
    pub childOffset: Clay_Vector2,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay__Clay_ClipElementConfigWrapper {
    pub wrapped: Clay_ClipElementConfig,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_BorderWidth {
    pub left: u16,
    pub right: u16,
    pub top: u16,
    pub bottom: u16,
    pub betweenChildren: u16,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay_BorderElementConfig {
    pub color: Clay_Color,
    pub width: Clay_BorderWidth,
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct Clay__Clay_BorderElementConfigWrapper {
    pub wrapped: Clay_BorderElementConfig,
}
